tests/data/midterm/midterm/2018087/Q6/submission_1/.vocStudentSubmissionReport.txt

[Executed at: Wed Mar 14 1:52:39 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24782_4/asnlib/submission.py", line 8, in <module>
    from q6_work import find_path
  File "./q6_work.py", line 15
    if j in in mrt[0]:#items are the mrtline j is station
             ^
SyntaxError: invalid syntax
Command exited with non-zero status 1
